--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "CCPA String Builder for JavaScript",
   "main": "dist/ccpa-string-builder.js",
+  "types": "dist/ccpa-string-builder.d.ts",
   "scripts": {
     "build": "webpack",
     "lint": "eslint src",
@@ -30,7 +31,11 @@
     "karma": "^5.2.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^3.3.1",
+    "ts-declaration-webpack-plugin": "^1.2.3",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "@types/node": "^7.0.7"
   }
 }
